--- a/Ejemplo/css/styles.css
+++ b/Ejemplo/css/styles.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
-    background-color: antiquewhite;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(230, 215, 250);
+    font-family: 'Courier New', Courier, monospace;
 }
 h1{
     font-size: large;
